<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_dessert">Droid Dessert</string>
    <string name="donut">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have choclate wafers and vanilla filling</string>
    <string name="froyo">Froyo is a premium self_serve frozen yoghurt</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a Froyo.</string>
    <string name="order_page">Page under construction. Visit it another time.</string>
    <string name="name_label_text">Name:</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address:</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="phone_label_text">Phone:</string>
    <string name="enter_phone_hint">Enter your phone number</string>
    <string name="note_label_text">Note:</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="name_text">Name:</string>
    <string name="enter__name_hint">Enter your name</string>
    <string name="choose_delivery_method">Choose a delivery method</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_order_message">You selected an Order</string>
    <string name="action_status_message">You selected a Status</string>
    <string name="action_favorite_message">You selected a Favorite message</string>
    <string name="action_contact_message">You selected a Contact</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="confirm_order">Do you want to continue with the order?</string>
    <string name="pick_a_date_button_text">pick a date</string>

    <string-array name="label_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_picker">date picker</string>
    <string name="date">\"Date: \"</string>
    <string name="tab_3">Cooking tips:</string>
    <string name="tab_2">Tech news you can use:</string>
    <string name="tab_1">These are the top stories:</string>

    <string name="tab_label1">Top Stories</string>
    <string name="tab_label2">Tech News</string>
    <string name="tab_label3">Cooking</string>
    <string name="title_activity_recycler_view">RecyclerView</string>
</resources>